--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "22.0.0"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.example.xjapan.karaoke2"
@@ -25,4 +26,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    apt 'com.github.gfx.android.orma:orma-processor:2.0.6'
+    compile 'com.github.gfx.android.orma:orma:2.0.6'
 }
