--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     apt 'com.github.gfx.android.orma:orma-processor:2.0.6'
     compile 'com.github.gfx.android.orma:orma:2.0.6'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
